--- a/my-react/.prettierrc
+++ b/my-react/.prettierrc
@@ -1,7 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "printWidth": 80,
+  "semi":false,
   "overrides": [
     {
       "files": ".prettierrc",
