--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@ant-design/pro-layout": "^6.5.0",
+    "@ant-design/pro-table": "^2.34.1",
     "@umijs/preset-react": "1.x",
     "umi": "^3.4.8"
   },
